--- a/app/src/main/res/layout/fragment_stock_list.xml
+++ b/app/src/main/res/layout/fragment_stock_list.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/custom_search_view" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/stock_recycler"
@@ -15,4 +15,12 @@
         tools:itemCount="12"
         tools:listitem="@layout/item_stock" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/error_image"
+        android:layout_gravity="center"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:srcCompat="@android:drawable/ic_dialog_alert"
+        app:tint="@color/purple_200" />
+
+</FrameLayout>
